# parser_price

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  init-mongo.js  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 35a187c6d7ab_change_tables.py  4687bdf6681b_change_type_field.py  6520eb12e187_initial.py  6718a0dc7f34_change_original_price_field.py  fe76463e41a8_add_field_store.py
parser/: engine.py  parse_url.py  services.py
parser/bot/: config.py  keyboards.py  messages.py  services.py
parser/database/: config.py  database.py  tables.py
parser/scripts/: parser_dictionary.py  product_data.py  services.py
