[tool.poetry]
name = "parser_price"
version = "0.1.0"
description = ""
authors = ["Alexander Pavlov <dev@pavlovteam.ru>"]
readme = "README.md"
packages = [
    { include = "parser" },
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.7"
pymongo = "^4.10.1"
schedule = "^1.2.2"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.36"
pytelegrambotapi = "^4.24.0"

[tool.poetry.scripts]
parser = 'parser.engine:main'

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"